--- a/src/App.css
+++ b/src/App.css
@@ -41,10 +41,12 @@ and (max-device-width: 900px) {
   .project-area {
     border: 1px solid #a19f9f;
     border-radius: 4px;
-    background-image: url('https://photos.app.goo.gl/sCaQdk8GAMrghHcX6');
+    background-image: url('https://lh3.googleusercontent.com/pw/AP1GczOJbs4004Io8zncPx236Y9ozQA4xzrVDMbdyl-raYTOwyHLVG4RiPGT0juyvobX5-1IEgkm_5AxF3f0VFQeqzje2IqLxeYB6o9PGbV7SWL-EDzXGwcsnrze5IHO5Fxplw8WqpwckTYVUkjE2WOS8-1b=w464-h825-s-no-gm?authuser=0');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
     margin: 11%;
     padding: 7%;
-    height: 71px;
     justify-content: center;
     align-items: center;
   }
