--- a/src/App.css
+++ b/src/App.css
@@ -44,10 +44,9 @@ and (max-device-width: 900px) {
     background-position: center; 
     background-repeat: no-repeat; 
     margin: 11%;
-    padding-top: 301px;
     min-height: 371px;
     justify-content: center;
-    align-items: center;
+    align-items: flex-end;
   }
   .project-eachcard {
     transition: 0.3s;
