--- a/src/App.css
+++ b/src/App.css
@@ -38,15 +38,17 @@ and (max-device-width: 900px) {
     cursor: pointer;
   }
   /* main page button area*/  
-  .project-area {
+  .project-phone-only-background {
     background-image: url('https://conrading.github.io/wroclaw-project/accessFile/04.jpg');
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
-    margin: 11%;
     min-height: 371px;
+  }
+  .project-area {
+    margin: 11%;
     justify-content: center;
-    align-items: flex-end;
+    align-items: center;
   }
   .project-eachcard {
     transition: 0.3s;
