--- a/src/App.css
+++ b/src/App.css
@@ -43,6 +43,7 @@ and (max-device-width: 900px) {
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
+    margin-top: 11%;
     min-height: 371px;
   }
   .project-area {
