--- a/src/components/author.css
+++ b/src/components/author.css
@@ -1,11 +1,14 @@
-.author-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    margin: 0; 
-}
+
 @media screen 
 and (max-device-width: 900px) {
+    .author-container {
+        margin: 0; 
+        justify-content: center;
+        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        gap: 11px
+    }
     .author-photo {
         margin: 0 auto;
         height: 100%;
@@ -22,16 +25,24 @@ and (max-device-width: 900px) {
 }
 @media screen 
 and (min-device-width: 911px) {
+    .author-container {
+        margin: 0; 
+        justify-content: center;
+        align-items: center;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
     .author-photo {
         margin: 0 auto;
+        border-radius: 4px;
         height: 100%;
         width: 100%;
         transition: 0.7s;
     }
     .author-line {
-        margin: 3%;
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         font-size: 17px;
+        margin: 3%;
         width: 100%;
         transition: 0.7s;
     }
