--- a/src/components/author.css
+++ b/src/components/author.css
@@ -29,6 +29,7 @@ and (min-device-width: 911px) {
         margin: 0; 
         justify-content: center;
         align-items: center;
+        display: flex;
     }
     .author-photo {
         margin: 0 auto;
