--- a/src/components/author.css
+++ b/src/components/author.css
@@ -11,6 +11,7 @@ and (max-device-width: 900px) {
         border-radius: 4px;
         height: 51%;
         width: 51%;
+        padding-left: 13px;
         transition: 0.7s;
     }
     .author-line {
@@ -32,9 +33,19 @@ and (min-device-width: 911px) {
     .author-photo {
         margin: 0 auto;
         border-radius: 11px;
-        height: 79%;
-        width: 79%;
+        height: 83%;
+        width: 83%;
         transition: 0.7s;
+    }
+    .author-line-container {
+        border-radius: 7px;
+        background-color: aliceblue;
+        height: 51vh;
+    }
+    .author-line-container:hover {
+        transition: 0.7s;
+        background-color: rgb(255, 255, 240);
+        box-shadow: 7px 7px 10px rgba(0, 0, 0, 0.1); 
     }
     .author-line {
         font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
