--- a/src/components/storyReader.css
+++ b/src/components/storyReader.css
@@ -9,14 +9,29 @@
     padding: 11px;
   }
   
-  /* Style the iframe to appear as a single page */
-  .pdf-iframe {
-    border: none; 
-    border-radius: 11px;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-    width: 910px; 
-    height: 1100px; 
-    max-width: 100%; 
-    max-height: 100%; 
+  @media screen 
+  and (max-device-width: 900px) {
+    .pdf-iframe {
+      border: none; 
+      border-radius: 11px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+      max-width: 100%; 
+      max-height: 100%; 
+    }
+  }
+  @media screen 
+  and (min-device-width: 911px) {
+    .pdf-iframe {
+      border: none; 
+      border-radius: 11px;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+      width: 910px; 
+      height: 1000px; 
+      max-width: 100%; 
+      max-height: 100%; 
+    }
+    .pdf-iframe:hover {
+      box-shadow: 7px 7px 10px rgba(0, 0, 0, 0.1); 
+    }
   }
   
