--- a/src/components/storyReader.css
+++ b/src/components/storyReader.css
@@ -9,8 +9,8 @@
     padding: 11px;
   }
 .pdf-viewer-container:hover {
-  background-color: rgb(50, 50, 51); 
-  transition: 1.3s;
+    background-color: rgb(50, 50, 51); 
+    transition: 1.3s;
 }
   
   @media screen 
@@ -19,8 +19,8 @@
       border: none; 
       border-radius: 11px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-      max-width: 100%; 
-      max-height: 100%; 
+      width: 100%; 
+      height: 100%; 
     }
   }
   @media screen 
