--- a/src/components/storyReader.css
+++ b/src/components/storyReader.css
@@ -3,25 +3,51 @@
   
   @media screen 
   and (max-device-width: 900px) {
-    .pdf-viewer-container {
-      display: flex;
-      justify-content: center; 
-      align-items: center; 
-      height: 89vh; 
-      background-color: #f0f0f0; 
-      border-radius: 11px;
+    .preReadingContainer {
+      transition: 1.3s;
+      margin: 0 auto;
+      width: 51%;
       padding: 3px;
+      background-color: #f0f0f0;
+      border-radius: 3px;
     }
-    .pdf-iframe {
-      border: none; 
-      border-radius: 11px;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
-      width: 91%; 
-      height: 91%; 
+    .preReadingText {
+      margin: 7px;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
   }
   @media screen 
   and (min-device-width: 911px) {
+    .preReadingContainer {
+      transition: 1.3s;
+      margin: 0 auto;
+      padding: 11px;
+      width: 31%;
+      background-color: #f0f0f0;
+      border-radius: 11px;
+    }
+    .preReadingContainer:hover {
+      background-color:aliceblue;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+    }
+    .preReadingText {
+      margin: 17px;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    }
+    .preReadingToggle {
+      text-align: center;
+      cursor: pointer;
+      margin: 17px;
+      padding: 3px;
+      border: 1px solid #dad1d1;
+      border-radius: 7px;
+    }
+    .preReadingToggle:hover {
+      border: #dad1d1;
+      background-color: #ebe8e8;
+      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
+      transition: 0.7s;
+    }
     .pdf-viewer-container {
       display: flex;
       justify-content: center; 
@@ -30,17 +56,23 @@
       background-color: #f0f0f0; 
       border-radius: 11px;
       padding: 11px;
+      transition: 1.3s;
     }
     .pdf-viewer-container:hover {
       background-color: rgb(50, 50, 51); 
       transition: 1.3s;
-  }
+    }
     .pdf-iframe {
       border: none; 
       border-radius: 11px;
       box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1); 
       max-width: 100%; 
       max-height: 100%; 
+    }
+    .jumpToPudu {
+      text-align: center;
+      margin: 17px;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
   }
   
