--- a/src/components/storyReader.css
+++ b/src/components/storyReader.css
@@ -6,13 +6,14 @@
     .preReadingContainer {
       transition: 1.3s;
       margin: 0 auto;
-      width: 51%;
-      padding: 3px;
+      width: 100%;
+      padding: 7px;
       background-color: #f0f0f0;
-      border-radius: 3px;
+      border-radius: 7px;
     }
     .preReadingText {
       margin: 7px;
+      font-size: 11px;
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
   }
