--- a/src/components/philosophy.css
+++ b/src/components/philosophy.css
@@ -1,4 +1,6 @@
 
+
+
 /* video area begin*/
 @media screen 
 and (max-device-width: 900px) {
@@ -12,6 +14,14 @@ and (max-device-width: 900px) {
 
 @media screen 
 and (min-device-width: 911px) {
+  .main-frame {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    justify-content: center;
+    align-items: center;
+    min-height: 71vh; 
+    width: 71%;
+  }
   .video-container {
     margin: 0 auto;
     justify-content: center;
