--- a/src/components/philosophy.css
+++ b/src/components/philosophy.css
@@ -1,15 +1,52 @@
 
-
-
-/* video area begin*/
 @media screen 
 and (max-device-width: 900px) {
+  .main-frame {
+    margin: 0 auto;
+    justify-content: center;
+    align-items: center;
+  }  
+  /* image area begin */
+  .thumbnail {
+    width: 100%;
+    cursor: pointer;
+  }  
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }  
+  .enlarged-image-container {
+    position: relative;
+  }  
+  .enlarged-image {
+    max-width: 90%;
+    max-height: 90%;
+  }  
+  .enlarged-image-container:after {
+    content: '✖';
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+  }
+  /* image area end */
+  /* video area begin */
   .video-centering {
     display: block;
     margin: 0 auto;
     width: 256px;
     height: 144px;  
   }
+  /* video area end */
 }
 
 @media screen 
@@ -17,26 +54,59 @@ and (min-device-width: 911px) {
   .main-frame {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
+    margin: 0 auto;
     justify-content: center;
     align-items: center;
     min-height: 71vh; 
     width: 71%;
   }
-  .video-container {
+  .left-column, .right-column {
     margin: 0 auto;
+    flex: 1;
+    width: 50%;
+  }  
+  /* image area begin */
+  .thumbnail {
+    width: 100%;
+    cursor: pointer;
+  }  
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
     justify-content: center;
     align-items: center;
-    display: grid;
-    grid-template-columns: repeat(3, 1fr);
+  }  
+  .enlarged-image-container {
+    position: relative;
+  }  
+  .enlarged-image {
+    max-width: 90%;
+    max-height: 90%;
+  }  
+  .enlarged-image-container:after {
+    content: '✖';
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
   }
+  /* image area end */
+  /* video area begin */
   .video-centering {
     display: block;
     margin: 0 auto;
     width: 196px;
     height: 348.5px;
   }
+  /* video area end */
 }
-/* video area end*/
 
 
 @media screen 
