--- a/src/components/philosophy.css
+++ b/src/components/philosophy.css
@@ -5,9 +5,41 @@ and (max-device-width: 900px) {
     margin: 0 auto;
     justify-content: center;
     align-items: center;
-    display: flex;
-    gap: 17px
+    gap: 13px;
   }  
+  /* image area begin */
+  .thumbnail {
+    width: 100%;
+    cursor: pointer;
+  }  
+  .overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.8);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }  
+  .enlarged-image-container {
+    position: relative;
+  }  
+  .enlarged-image {
+    max-width: 71%;
+    max-height: 71%;
+  }  
+  .enlarged-image-container:after {
+    content: '✖';
+    position: absolute;
+    top: -10px;
+    right: -10px;
+    font-size: 24px;
+    color: white;
+    cursor: pointer;
+  }
+  /* image area end */
   /* video area begin */
   .video-centering {
     display: block;
