--- a/src/components/philosophy.css
+++ b/src/components/philosophy.css
@@ -5,7 +5,9 @@ and (max-device-width: 900px) {
     margin: 0 auto;
     justify-content: center;
     align-items: center;
-    gap: 13px;
+  }  
+  .left-column, .right-column {
+    margin: 13px;
   }  
   /* image area begin */
   .thumbnail {
@@ -33,8 +35,8 @@ and (max-device-width: 900px) {
   .enlarged-image-container:after {
     content: '✖';
     position: absolute;
-    top: -10px;
-    right: -10px;
+    top: -17px;
+    right: 37%;
     font-size: 24px;
     color: white;
     cursor: pointer;
@@ -44,8 +46,8 @@ and (max-device-width: 900px) {
   .video-centering {
     display: block;
     margin: 0 auto;
-    width: 256px;
-    height: 144px;  
+    width: auto;
+    height: 171px;  
   }
   /* video area end */
 }
@@ -101,14 +103,14 @@ and (min-device-width: 911px) {
     position: relative;
   }  
   .enlarged-image {
-    max-width: 71%;
-    max-height: 71%;
+    max-width: 59%;
+    max-height: 59%;
   }  
   .enlarged-image-container:after {
     content: '✖';
     position: absolute;
-    top: -10px;
-    right: -10px;
+    top: -31px;
+    right: 37%;
     font-size: 24px;
     color: white;
     cursor: pointer;
