--- a/src/App.css
+++ b/src/App.css
@@ -86,6 +86,59 @@ and (min-device-width: 911px) {
   .backGap {
     margin: 29px;
   }
+  /* css motion area*/   
+  .shape {
+  position: absolute;
+  width: 50px;
+  height: 50px;
+  background-color: red; /* Default color */
+  animation: move 5s infinite;
+  }
+  .shape:nth-child(odd) {
+    background-color: blue;
+    animation: move 5s infinite;
+  }
+  .shape:nth-child(even) {
+    background-color: green;
+    animation: move 6s infinite;
+  }
+  @keyframes move {
+    0% {
+      transform: translate(0, 0) rotate(0deg);
+      opacity: 1;
+    }
+    50% {
+      transform: translate(500px, 300px) rotate(180deg);
+      opacity: 0.5;
+    }
+    100% {
+      transform: translate(0, 0) rotate(360deg);
+      opacity: 1;
+    }
+  }
+  .final-rectangle {
+    position: absolute;
+    width: 200px;
+    height: 100px;
+    background-color: yellow;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    animation: appear 5s forwards;
+  }
+  @keyframes appear {
+    0% {
+      width: 0;
+      height: 0;
+      opacity: 0;
+    }
+    100% {
+      width: 200px;
+      height: 100px;
+      opacity: 1;
+    }
+  } 
+  /* css motion area*/    
   /* main page button area*/    
   .project-area {
     margin: 0 auto;
