--- a/src/App.css
+++ b/src/App.css
@@ -87,6 +87,15 @@ and (min-device-width: 911px) {
     margin: 29px;
   }
   /* css motion area*/   
+  .background-motion {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #000;
+    z-index: -1; /* Ensure it is behind other content */
+  }
   .shape {
   position: absolute;
   width: 50px;
