--- a/src/components/philosophy.css
+++ b/src/components/philosophy.css
@@ -9,6 +9,22 @@ and (max-device-width: 900px) {
   .left-column, .right-column {
     margin: 13px;
   }  
+  /* background area begin */
+  .background-upper {
+    background-color: azure;
+    background-position: center;  
+    background-size: cover;    
+    background-repeat: no-repeat; 
+    transition: 0.7s;
+  }
+  .background-bottom {
+    background-color: azure;
+    background-position: center;  
+    background-size: cover;    
+    background-repeat: no-repeat; 
+    transition: 0.7s;
+  }
+  /* background area end */
   /* image area begin */
   .thumbnail {
     width: 100%;
