--- a/src/App.css
+++ b/src/App.css
@@ -41,13 +41,11 @@ and (max-device-width: 900px) {
   }
   /* main page button area*/  
   .project-phone-only-background {
-    border-radius: 4px;
     background-image: url('https://conrading.github.io/wroclaw-project/accessFile/04.jpg');
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
     margin-top: 11%;
-    min-height: 371px;
   }
   .project-area {
     margin: 11%;
@@ -86,68 +84,6 @@ and (min-device-width: 911px) {
   .backGap {
     margin: 29px;
   }
-  /* css motion area*/   
-  .background-motion {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: #000;
-    z-index: -1; /* Ensure it is behind other content */
-  }
-  .shape {
-  position: absolute;
-  width: 50px;
-  height: 50px;
-  background-color: red; /* Default color */
-  animation: move 5s infinite;
-  }
-  .shape:nth-child(odd) {
-    background-color: blue;
-    animation: move 5s infinite;
-  }
-  .shape:nth-child(even) {
-    background-color: green;
-    animation: move 6s infinite;
-  }
-  @keyframes move {
-    0% {
-      transform: translate(0, 0) rotate(0deg);
-      opacity: 1;
-    }
-    50% {
-      transform: translate(500px, 300px) rotate(180deg);
-      opacity: 0.5;
-    }
-    100% {
-      transform: translate(0, 0) rotate(360deg);
-      opacity: 1;
-    }
-  }
-  .final-rectangle {
-    position: absolute;
-    width: 200px;
-    height: 100px;
-    background-color: yellow;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    animation: appear 5s forwards;
-  }
-  @keyframes appear {
-    0% {
-      width: 0;
-      height: 0;
-      opacity: 0;
-    }
-    100% {
-      width: 200px;
-      height: 100px;
-      opacity: 1;
-    }
-  } 
-  /* css motion area*/    
   /* main page button area*/    
   .project-area {
     margin: 0 auto;
@@ -174,24 +110,6 @@ and (min-device-width: 911px) {
     box-shadow: 0 8px 16px 0 rgba(0,0,0,0.2);
     animation: expanding 1.7s
   }
-  .project-eachcard-philosophy:hover {
-    background-image: url("https://conrading.github.io/wroclaw-project/accessFile/01.jpg"); 
-    background-size: cover; /* Ensures the image covers the whole element */
-    background-position: center; /* Centers the image */
-    background-repeat: no-repeat; /* Prevents the image from repeating */
-  }
-  .project-eachcard-readStory:hover {
-    background-image: url('https://conrading.github.io/wroclaw-project/accessFile/02.jpg');
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-  }
-  .project-eachcard-aboutAuthor:hover {
-    background-image: url('https://conrading.github.io/wroclaw-project/accessFile/03.jpg');
-    background-size: cover; 
-    background-position: center; 
-    background-repeat: no-repeat; 
-  }
   @keyframes expanding {
     from {
       min-height: 0vh;
@@ -201,6 +119,79 @@ and (min-device-width: 911px) {
       color:transparent;
     }
   }
+  /* left button area*/   
+  .project-eachcard-philosophy {
+    animation: moveDown 5s;
+  }
+  @keyframes moveDown {
+    0% {
+      border: 1px solid rgb(81, 81, 124);
+      transform: translate(0, 0) rotate(0deg);
+      opacity: 1;
+    }
+    50% {
+      transform: translate(11px, 11px) rotate(180deg);
+      opacity: 0.5;
+    }
+    100% {
+      transform: translate(0, 0) rotate(360deg);
+      opacity: 1;
+    }
+  }
+  .project-eachcard-philosophy:hover {
+    background-image: url("https://conrading.github.io/wroclaw-project/accessFile/01.jpg"); 
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; /* Prevents the image from repeating */
+  }
+  /* left button area*/  
+  /* middle button area*/  
+  .project-eachcard-readStory {
+    animation: appear 5s;
+  }
+  @keyframes appear {
+    0% {
+      border: 2px solid rgb(81, 81, 124);
+      box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
+      opacity: 0;
+    }
+    100% {
+      opacity: 1;
+    }
+  } 
+  .project-eachcard-readStory:hover {
+    background-image: url('https://conrading.github.io/wroclaw-project/accessFile/02.jpg');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+  }
+  /* middle button area*/  
+  /* right button area*/  
+  .project-eachcard-aboutAuthor {
+    animation: moveUp 5s;
+  }
+  @keyframes moveUp {
+    0% {
+      border: 2px solid rgb(81, 81, 124);
+      transform: translate(0, 0) rotate(0deg);
+      opacity: 1;
+    }
+    50% {
+      transform: translate(-11px, -11px) rotate(180deg);
+      opacity: 0.5;
+    }
+    100% {
+      transform: translate(0, 0) rotate(360deg);
+      opacity: 1;
+    }
+  }
+  .project-eachcard-aboutAuthor:hover {
+    background-image: url('https://conrading.github.io/wroclaw-project/accessFile/03.jpg');
+    background-size: cover; 
+    background-position: center; 
+    background-repeat: no-repeat; 
+  }
+  /* right button area*/  
   .project-title {
     text-align: center;
     margin: 0 auto;
