--- a/src/App.css
+++ b/src/App.css
@@ -47,7 +47,7 @@ and (max-device-width: 900px) {
     background-repeat: no-repeat; 
     margin-top: 11%;
     width: auto;
-    height: auto;
+    height: 71px;
   }
   .project-area {
     margin: 11%;
