--- a/src/App.css
+++ b/src/App.css
@@ -46,7 +46,7 @@ and (max-device-width: 900px) {
     background-position: center; 
     background-repeat: no-repeat; 
     margin-top: 11%;
-    margin-bottom: 11%;
+    margin-bottom: 31px;
     width: auto;
     height: 71px;
   }
@@ -68,7 +68,6 @@ and (max-device-width: 900px) {
   }
   @keyframes moveUp {
     0% {
-      border: 2px solid rgb(81, 81, 124);
       transform: translate(0, 0) rotate(0deg);
       opacity: 1;
     }
@@ -88,7 +87,6 @@ and (max-device-width: 900px) {
   }
   @keyframes appear {
     0% {
-      border: 2px solid rgb(81, 81, 124);
       box-shadow: 0 16px 32px 0 rgba(0,0,0,0.2);
       opacity: 0;
     }
@@ -103,7 +101,6 @@ and (max-device-width: 900px) {
   }
   @keyframes moveDown {
     0% {
-      border: 1px solid rgb(81, 81, 124);
       transform: translate(0, 0) rotate(0deg);
       opacity: 1;
     }
