--- a/src/App.css
+++ b/src/App.css
@@ -45,7 +45,7 @@ and (max-device-width: 900px) {
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
-    margin-top: 11%;
+    margin-top: 71px;
     margin-bottom: 111px;
     width: auto;
     height: 71px;
