--- a/src/components/author.css
+++ b/src/components/author.css
@@ -45,9 +45,8 @@
       box-shadow: 0px 0px 30px rgba(0, 0, 0, 0.1);
   }
   .author-photo {
-      border-radius: 50%;
-      height: 300px;
-      width: 300px;
+      height: 339px;
+      width: 339px;
       transition: transform 0.7s ease, box-shadow 0.7s ease;
       box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2);
   }
@@ -60,6 +59,7 @@
     padding: 5px 5px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 15px;
+    font-weight: 500;
     color: rgba(75, 69, 58, 0.856);
     border: 1px solid #ccc;
     border-radius: 5px;
@@ -69,7 +69,7 @@
   }
   .social-media-link-button:hover {
     transition: 0.3s;
-    color: rgba(128, 95, 7, 0.856);
+    font-weight: 700;
     border: 1px solid #504444;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   }
