--- a/src/components/author.css
+++ b/src/components/author.css
@@ -16,6 +16,18 @@
       transform: scale(1.05);
       box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.4);
   }
+  .social-media-link-button {
+    margin: 5px;
+    padding: 3px 3px;
+    font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    font-size: 11px;
+    color: rgba(75, 69, 58, 0.856);
+    border: 1px solid #ccc;
+    border-radius: 3px;
+    text-align: center;
+    width: 111px;
+    cursor: pointer;
+  }
   .author-line-container {
       margin-top: 20px;
       border-radius: 15px;
@@ -59,17 +71,15 @@
     padding: 5px 5px;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 15px;
-    font-weight: 500;
     color: rgba(75, 69, 58, 0.856);
     border: 1px solid #ccc;
     border-radius: 5px;
     text-align: center;
-    width: 111px;
+    width: 131px;
     cursor: pointer;
   }
   .social-media-link-button:hover {
     transition: 0.3s;
-    font-weight: 700;
     border: 1px solid #504444;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2);
   }
