--- a/src/App.css
+++ b/src/App.css
@@ -45,10 +45,12 @@ and (max-device-width: 900px) {
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
-    margin-top: 71px;
-    margin-bottom: 111px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+    border-radius: 5px;
+    margin-top: 53px;
+    margin-bottom: 53px;
     width: auto;
-    height: 71px;
+    height: 100%;
     animation: appear 5s;
   }
   .project-area {
