--- a/src/App.css
+++ b/src/App.css
@@ -51,7 +51,7 @@ and (max-device-width: 900px) {
     margin-top: 53px;
     margin-bottom: 53px;
     width: auto;
-    height: 100%;
+    height: auto;
     animation: appear 5s;
   }
   .project-area {
