--- a/src/App.css
+++ b/src/App.css
@@ -42,7 +42,7 @@ and (max-device-width: 900px) {
   /* main page button area*/  
   .project-phone-only-background {
     background-image: url('https://conrading.github.io/wroclaw-project/accessFile/04.jpg');
-    background-size: 89% 89%; 
+    background-size: 89% 89%; /* change from "cover" */
     background-position: center; 
     background-repeat: no-repeat; 
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
@@ -50,7 +50,7 @@ and (max-device-width: 900px) {
     margin-top: 53px;
     margin-bottom: 53px;
     width: auto;
-    height: 311px;
+    height: 299px;
     animation: appear 5s;
   }
   .project-area {
