--- a/src/App.css
+++ b/src/App.css
@@ -25,6 +25,14 @@
 }
 @media screen 
 and (max-device-width: 900px) {
+  .project-mainTitle {
+    text-align: center;
+    margin: 0 auto;
+    font-size: 17px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    letter-spacing: 11px;
+    padding: 7px;
+  }
   /* back button only show in each component */  
   .contentSwitcher {
     padding: 5px 5px;
@@ -119,7 +127,7 @@ and (max-device-width: 900px) {
     }
   }
   /* right button area*/ 
-  .project-title {
+  .project-items {
     text-align: center;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     font-size: 11px;
@@ -128,6 +136,16 @@ and (max-device-width: 900px) {
 }
 @media screen 
 and (min-device-width: 911px) {
+  .project-mainTitle {
+    text-align: center;
+    margin: 0 auto;
+    width: 71%;
+    border-bottom: solid 1px #dad3d3;
+    font-size: 37px;
+    font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    letter-spacing: 17px;
+    padding: 17px;
+  }
   /* back button only show in each component */  
   .contentSwitcher {
     padding: 5px 5px;
@@ -154,7 +172,7 @@ and (min-device-width: 911px) {
     grid-template-columns: repeat(3, 1fr);
     justify-content: center;
     align-items: center;
-    min-height: 71vh; 
+    min-height: 65vh; 
     width: 71%;
   }
   .project-eachcard {
@@ -256,7 +274,7 @@ and (min-device-width: 911px) {
     background-repeat: no-repeat; 
   }
   /* right button area*/  
-  .project-title {
+  .project-items {
     text-align: center;
     margin: 0 auto;
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
@@ -289,8 +307,8 @@ and (min-device-width: 911px) {
     justify-content: center; 
     align-items: center; 
     margin: 0 auto;
-    cursor: pointer;
     padding: 3%;
+    height: 37px;
     width: 71%;
   }
 }
