--- a/src/App.css
+++ b/src/App.css
@@ -28,10 +28,9 @@ and (max-device-width: 900px) {
   .project-mainTitle {
     text-align: center;
     margin: 0 auto;
-    font-size: 17px;
+    font-size: 1px;
     font-family:Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-    letter-spacing: 11px;
-    padding: 7px;
+    color:white;
   }
   /* back button only show in each component */  
   .contentSwitcher {
