--- a/src/components/storyReader.css
+++ b/src/components/storyReader.css
@@ -16,6 +16,27 @@
       font-size: 11px;
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
+    .pdf-viewer-container {
+      display: flex;
+      justify-content: center; 
+      align-items: center; 
+      height: 51vh; 
+      background-color: #f0f0f0; 
+      border-radius: 3px;
+      padding: 3px;
+      transition: 1.3s;
+    }
+    .pdf-viewer-container:hover {
+      background-color: rgb(50, 50, 51); 
+      transition: 1.3s;
+    }
+    .pdf-iframe {
+      border: none; 
+      border-radius: 3px;
+      box-shadow: 0 3px 7px rgba(0, 0, 0, 0.1); 
+      max-width: 100%; 
+      max-height: 100%; 
+    }
   }
   @media screen 
   and (min-device-width: 911px) {
@@ -53,7 +74,7 @@
       display: flex;
       justify-content: center; 
       align-items: center; 
-      height: 100vh; 
+      height: 97vh; 
       background-color: #f0f0f0; 
       border-radius: 11px;
       padding: 11px;
