--- a/src/components/storyReader.css
+++ b/src/components/storyReader.css
@@ -16,6 +16,14 @@
       font-size: 11px;
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
+    .preReadingToggle {
+      text-align: center;
+      cursor: pointer;
+      margin: 5px;
+      padding: 1px;
+      border: 1px solid #dad1d1;
+      border-radius: 3px;
+    }
     .pdf-viewer-container {
       display: flex;
       justify-content: center; 
@@ -32,6 +40,7 @@
     }
     .pdf-iframe {
       border: none; 
+      transform: scale(0.9);
       border-radius: 3px;
       box-shadow: 0 3px 7px rgba(0, 0, 0, 0.1); 
       width: 100%;
