--- a/src/components/storyReader.css
+++ b/src/components/storyReader.css
@@ -28,7 +28,7 @@
       display: flex;
       justify-content: center; 
       align-items: center; 
-      height: 59vh; 
+      height: 61vh; 
       background-color: #f0f0f0; 
       border-radius: 3px;
       padding: 3px;
@@ -46,6 +46,11 @@
       height: 100%;
       max-width: 100%; 
       max-height: 100%; 
+    }
+    .jumpToPudu {
+      text-align: center;
+      margin: 7px;
+      font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
   }
   @media screen 
