--- a/src/components/storyReader.css
+++ b/src/components/storyReader.css
@@ -49,6 +49,7 @@
     }
     .jumpToPudu {
       text-align: center;
+      font-size: 11px;
       margin: 7px;
       font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
     }
