--- a/src/App.css
+++ b/src/App.css
@@ -96,15 +96,12 @@
 
 .about-container {
   background:  #ffbc7d; 
-  margin: 0 auto;
 }
 .about {
-  display: flex;
-  flex-wrap: wrap;
+  display: block; /* remove flex layout */
   padding: 2em;
   width: 63%;
-  align-items: center;
-  justify-content: space-between;
+  margin: 0 auto; /* center container */
 }
 
 .footer {
