--- a/src/App.css
+++ b/src/App.css
@@ -98,10 +98,12 @@
   background:  #ffbc7d; 
 }
 .about {
-  display: block; /* remove flex layout */
   padding: 2em;
   width: 63%;
   margin: 0 auto; /* center container */
+  padding: 2em;
+  align-items: center;
+  justify-content: space-between;
 }
 
 .footer {
